Perkin-UAT/force-app/main/default/objects/SMAX_PS_InstalledProductClassification__c/SMAX_PS_InstalledProductClassification__c.object-meta.xml
<CustomObject>
    <label>Installed Product Classification</label>
    <nameField>
        <displayFormat>IPC-{0000000000}</displayFormat>
        <label>Installed Product Classification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Installed Product Classifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>