Perkin-UAT/force-app/main/default/objects/SMAX_PS_InstalledProductClassification__c/fields/SMAX_PS_Characteristic__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_Characteristic__c</fullName>
    <label>Characteristic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>