Perkin-UAT/force-app/main/default/objects/SMAX_PS_InstalledProductClassification__c/fields/SMAX_PS_InstalledProduct__c.field-meta.xml
<CustomField>
    <fullName>SMAX_PS_InstalledProduct__c</fullName>
    <label>Equipment Number</label>
    <referenceTo>SVMXC__Installed_Product__c</referenceTo>
    <relationshipLabel>Installed Product Classifications</relationshipLabel>
    <relationshipName>Installed_Product_Classifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>